# Autonomous-Vehicle-Framework

./: README.md
isaac_ros-dev/: logging3.tgz  logging5.tgz  logging6.tgz  logging_circle.tgz  logging_data.tgz  logging_weird.tgz  yolov8n.pt
isaac_ros-dev/bags/autonomy_9_13_1/: autonomy_9_13_1_0.db3  metadata.yaml
isaac_ros-dev/bags/autonomy_9_13_2/: autonomy_9_13_2_0.db3  metadata.yaml
isaac_ros-dev/bags/obj_avoid_camera/: metadata.yaml  obj_avoid_camera_0.db3
isaac_ros-dev/bags/obj_avoid_camera_2/: metadata.yaml
isaac_ros-dev/bags/obj_avoid_camera_3/: metadata.yaml  obj_avoid_camera_3_0.db3
isaac_ros-dev/bags/obj_avoid_key_board_2/: metadata.yaml  obj_avoid_key_board_2_0.db3
isaac_ros-dev/bags/obj_avoid_key_board_3/: metadata.yaml  obj_avoid_key_board_3_0.db3
isaac_ros-dev/bags/rosbag2_2023_04_28-14_26_01/: metadata.yaml  rosbag2_2023_04_28-14_26_01_0.db3
isaac_ros-dev/bags/rosbag2_2023_04_28-16_29_04/: metadata.yaml  rosbag2_2023_04_28-16_29_04_0.db3
isaac_ros-dev/bags/rosbag2_2023_07_13-16_34_39/: metadata.yaml  rosbag2_2023_07_13-16_34_39_0.db3
isaac_ros-dev/bags/rosbag2_2023_08_10-17_26_23/: metadata.yaml  rosbag2_2023_08_10-17_26_23_0.db3
isaac_ros-dev/install/: local_setup.sh  setup.sh
isaac_ros-dev/launch/: bringup_launch.py
isaac_ros-dev/obj_avoid_key_board/: metadata.yaml  obj_avoid_key_board_0.db3
isaac_ros-dev/src/: simple_python_server.py
isaac_ros-dev/src/simple_http_server/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/simple_http_server/simple_http_server/: simple_server_node.py
isaac_ros-dev/utils/: unet.pkl
(+26 files in other folders)
