<?xml version="1.0"?>
<package format="3">
  <name>simple_http_server</name>
  <version>0.0.0</version>
  <description>A simple HTTP server node for ROS 2</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>python3-aiohttp</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
